# Q4_2025_Builder_payal

./: .gitmodules
anchor-vault/: Anchor.toml
anchor-vault/programs/anchor-vault/src/: lib.rs
anchor-vault/tests/: anchor-vault.ts
anchor_amm/: Anchor.toml
anchor_amm/programs/anchor_amm/: Cargo.toml
anchor_amm/programs/anchor_amm/src/: lib.rs
anchor_amm/programs/anchor_amm/src/instructions/: deposit.rs  initialize.rs  swap.rs  withdraw.rs
anchor_amm/tests/: anchor_amm.ts
capstone/: Anchor.toml  Readme.md
capstone/programs/capstone/: Cargo.toml
capstone/programs/capstone/src/: error.rs  lib.rs
capstone/programs/capstone/src/instructions/: add_verifier.rs  initialize_config.rs  mod.rs  register_project.rs  suspend.rs  update_project.rs  verify_project.rs  withdraw_admin.rs  withdraw_verifier.rs
capstone/programs/capstone/src/state/: attestation.rs  config.rs  mod.rs  project.rs  treasury.rs  verifier.rs
capstone/tests/: capstone.ts
mplxcore/: Anchor.toml
mplxcore/programs/mplxcore/: Cargo.toml
mplxcore/programs/mplxcore/src/: lib.rs
mplxcore/programs/mplxcore/src/instructions/: whitelist_creator.rs
mplxcore/tests/: mplxcore.ts
nft_staking/: Anchor.toml
nft_staking/programs/nft_staking/: Cargo.toml
nft_staking/programs/nft_staking/src/: lib.rs
nft_staking/tests/: nft_staking.ts
prereq/airdrop/: .gitignore  airdrop.ts  enroll.ts  keygen.ts  package.json  transfer.ts
prereq/airdrop/programs/: Turbin3-prereq.json
prereq/airdrop/scripts/: generate-client.ts
prereq/airdrop2/: Readme.md
prereq/airdrop2/src/: lib.rs
(+10 files in other folders)
